--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.26.2
-pandas==2.1.4
+numpy>=1.26.2
+pandas>=2.1.4
 scikit-learn==1.3.2
-imblearn==0.11.0
-scipy==1.11.4
-streamlit==1.29.0
+imblearn>=0.0
+scipy>=1.11.4
+streamlit>=1.29.0
