--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pip==24.2
-numpy>=1.26.2; python_version >= '3.12'
-pandas>=2.1.4; python_version >= '3.12'
-scikit-learn==1.3.2; python_version >= '3.12'
-imblearn>=0.11.0; python_version >= '3.12'  
-scipy>=1.11.4; python_version >= '3.12'
-streamlit>=1.29.0; python_version >= '3.12'
+numpy>=1.26.2
+pandas>=2.1.4
+scikit-learn==1.3.2
+imblearn>=0.11.0 
+scipy>=1.11.4
+streamlit>=1.29.0
