--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 pip==24.2
 numpy>=1.26.2
 pandas>=2.1.4
-scikit-learn
-imblearn 
-scipy>=1.11.4
 streamlit>=1.29.0
+imbalanced-learn==0.12.3
+imblearn==0.0
+joblib==1.4.2
+scikit-learn==1.5.1
+scipy==1.14.0
+threadpoolctl==3.5.0
