--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pandas>=2.1.4
 streamlit>=1.29.0
 imbalanced-learn==0.12.3
 imblearn==0.0
-joblib==1.4.2
+# joblib==1.4.2
 scikit-learn==1.5.1
 scipy==1.14.0
 threadpoolctl==3.5.0
